feature/worker side register

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -11,3 +11,6 @@ REFRESH_TOKEN_EXPIRY=
 BCRYPT_SALT_ROUNDS=
 EMAIL_USER=
 EMAIL_PASS=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
