--- a/Backend/package.json
+++ b/Backend/package.json
@@ -33,6 +33,7 @@
     "nodemailer": "^7.0.3",
     "redis": "^5.5.6",
     "reflect-metadata": "^0.2.2",
+    "stripe": "^19.1.0",
     "tsconfig-paths": "^4.2.0",
     "tsyringe": "^4.10.0",
     "winston": "^3.17.0",
