--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,8 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.8.2",
+    "@stripe/react-stripe-js": "^5.2.0",
+    "@stripe/stripe-js": "^8.0.0",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
