--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,12 +29,14 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.22",
     "input-otp": "^1.4.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.517.0",
     "react": "^19.1.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.0",
     "react-easy-crop": "^5.5.3",
     "react-hook-form": "^7.58.1",
