--- a/Backend/package.json
+++ b/Backend/package.json
@@ -30,13 +30,17 @@
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "mongoose": "^8.16.0",
+    "morgan": "^1.10.1",
     "nodemailer": "^7.0.3",
     "redis": "^5.5.6",
     "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "stripe": "^19.1.0",
     "tsconfig-paths": "^4.2.0",
     "tsyringe": "^4.10.0",
-    "winston": "^3.17.0",
+    "winston": "^3.18.3",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.0.2"
   },
   "devDependencies": {
@@ -46,8 +50,11 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.3",
     "@types/nodemailer": "^6.4.17",
+    "@types/socket.io": "^3.0.1",
+    "@types/socket.io-client": "^1.4.36",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "concurrently": "^9.2.0",
